force-app/main/default/objects/Educational_History__c/Educational_History__c.object-meta.xml
<CustomObject>
    <label>Educational History</label>
    <nameField>
        <label>Educational History Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Educational Histories</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>