force-app/main/default/objects/Educational_History__c/fields/Candidate__c.field-meta.xml
<CustomField>
    <fullName>Candidate__c</fullName>
    <label>Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Educational Histories</relationshipLabel>
    <relationshipName>Educational_Histories</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>