force-app/main/default/objects/Educational_History__c/fields/Degree_Date__c.field-meta.xml
<CustomField>
    <fullName>Degree_Date__c</fullName>
    <label>Degree Date</label>
    <length>50</length>
    <type>Text</type>
</CustomField>