force-app/main/default/objects/Educational_History__c/fields/Degree_Name__c.field-meta.xml
<CustomField>
    <fullName>Degree_Name__c</fullName>
    <label>Degree Name</label>
    <length>240</length>
    <type>Text</type>
</CustomField>