force-app/main/default/objects/Educational_History__c/fields/Educational_History_No__c.field-meta.xml
<CustomField>
    <fullName>Educational_History_No__c</fullName>
    <displayFormat>EID-{0000}</displayFormat>
    <label>Educational History No</label>
    <type>AutoNumber</type>
</CustomField>