force-app/main/default/objects/Educational_History__c/fields/EndDate__c.field-meta.xml
<CustomField>
    <fullName>EndDate__c</fullName>
    <label>EndDate</label>
    <length>60</length>
    <type>Text</type>
</CustomField>