force-app/main/default/objects/Educational_History__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <label>GPA</label>
    <length>60</length>
    <type>Text</type>
</CustomField>