force-app/main/default/objects/Educational_History__c/fields/Graduated__c.field-meta.xml
<CustomField>
    <fullName>Graduated__c</fullName>
    <label>Graduated</label>
    <length>100</length>
    <type>Text</type>
</CustomField>