force-app/main/default/objects/Educational_History__c/fields/GraduationDate__c.field-meta.xml
<CustomField>
    <fullName>GraduationDate__c</fullName>
    <label>GraduationDate</label>
    <length>60</length>
    <type>Text</type>
</CustomField>