force-app/main/default/objects/Educational_History__c/fields/Major__c.field-meta.xml
<CustomField>
    <fullName>Major__c</fullName>
    <label>Major</label>
    <length>200</length>
    <type>Text</type>
</CustomField>