force-app/main/default/objects/Educational_History__c/fields/StartDate__c.field-meta.xml
<CustomField>
    <fullName>StartDate__c</fullName>
    <label>StartDate</label>
    <length>60</length>
    <type>Text</type>
</CustomField>