force-app/main/default/objects/Educational_History__c/fields/StateProvince__c.field-meta.xml
<CustomField>
    <fullName>StateProvince__c</fullName>
    <label>StateProvince</label>
    <length>250</length>
    <type>Text</type>
</CustomField>